--- a/lab3/lab3.ipynb
+++ b/lab3/lab3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,8 @@
     "    cooked[\"active_rows_number\"] = sum(o > 0 for o in state.rows)\n",
     "    cooked[\"active_rows_index\"] = active_rows_index(state)\n",
     "    cooked[\"rows_with_one_element\"] = [(index, r) for index, r in enumerate(state.rows) if r == 1]\n",
-    "    \n",
+    "    cooked[\"rows_multiple_elem\"] = [(index, r) for index, r in enumerate(state.rows) if r > 1]\n",
+    "\n",
     "    cooked[\"shortest_row\"] = min((x for x in enumerate(state.rows) if x[1] > 0), key=lambda y: y[1])[0]\n",
     "    cooked[\"longest_row\"] = max((x for x in enumerate(state.rows)), key=lambda y: y[1])[0]\n",
     "    cooked[\"nim_sum\"] = nim_sum(state)\n",
@@ -315,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,50 +374,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def rule_two(state: Nim, data:dict, genome: dict):\n",
+    "def rule_one_multiple_left(state: Nim, data:dict, genome: dict, rule: str):\n",
     "  active_rows_index = data[\"active_rows_index\"]\n",
     "  single_elem_rows = data[\"rows_with_one_element\"]\n",
+    "  multiple_elem_rows = data[\"rows_multiple_elem\"]\n",
     "\n",
-    "  if genome[\"Rule2\"][0] == 0:  # take from row with one elem\n",
+    "  #print(f'rule {rule}')\n",
+    "\n",
+    "  if genome[rule][0] == 0:  # take from row with one elem\n",
+    "    #print('Row one elem')\n",
     "    elem = 1 # want to take the last elem in row\n",
     "    single_elem_row = single_elem_rows[0][0] # looks like [(row,elem),(row,elem)] if two rows with single elem\n",
     "    ply = Nimply(single_elem_row, 1)\n",
     "\n",
     "  else: #take from the row with more than one element\n",
-    "    if len(single_elem_rows) > 1:\n",
+    "    #print('multiple row')\n",
+    "    if len(multiple_elem_rows) == 0: #if single elem in all rows\n",
     "      row = single_elem_rows[0][0]\n",
-    "    else:\n",
-    "      row = [i for i in active_rows_index if state.rows[i] != 1][0]\n",
-    "    \n",
-    "    if (genome['Rule2'][1] > row): # if it wants to leave more elem than exists in row\n",
     "      elem = 1\n",
-    "      ply = Nimply(row, 1)\n",
-    "                      \n",
     "    else: \n",
-    "      elem = max(state.rows[row] - genome['Rule2'][1], 1)\n",
-    "      ply = Nimply(row, elem)\n",
+    "      row = multiple_elem_rows[0][0] # [(row,elem)] -> since only one row with multiple elem\n",
+    "    if (genome[rule][1] > state.rows[row]): # if it wants to leave more elem than exists in row\n",
+    "      elem = 1\n",
+    "                        \n",
+    "    else: \n",
+    "      #print(f\"ROWWWW {row}\")\n",
+    "      #print(f\"the rows left {state.rows}\")\n",
+    "      elem = max(state.rows[row] - genome[rule][1], 1)\n",
+    "    \n",
+    "    ply = Nimply(row, elem)\n",
     "      \n",
     "  return ply"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 353,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def rule_three(state: Nim, data: dict, genome: dict):\n",
+    "def rule_several_multiple_left(state: Nim, data: dict, genome: dict, rule: str):\n",
     "  #logging.debug('Coosing rule 3')\n",
-    "  if (genome['Rule3'][0] == 0): # choose from row with fewest elemt\n",
+    "  if (genome[rule][0] == 0): # choose from row with fewest elemt\n",
     "    row = data['shortest_row']\n",
     "  else:\n",
     "    row = data['longest_row']\n",
-    "      \n",
-    "  elem = max(state.rows[row] - genome['Rule3'][1], 1)\n",
+    "  \n",
+    "  #print(f'Row rule 5: {row}')    \n",
+    "  elem = max(state.rows[row] - genome[rule][1], 1)\n",
     "  ply = Nimply(row, elem)\n",
     "\n",
     "  return ply"
@@ -424,27 +433,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def two_rows_left(state: Nim, data: dict, genome: dict ) -> Nimply:\n",
-    "  \n",
-    "  rows_with_one_elem = data[\"rows_with_one_element\"]\n",
-    " \n",
-    "  if rows_with_one_elem: # Rule 2\n",
+    "def even_rows_left(state: Nim, data: dict, genome: dict ) -> Nimply:\n",
+    "  rows_multiple_elem = data[\"rows_multiple_elem\"]\n",
+    "  #print(rows_multiple_elem)\n",
+    "  if len(rows_multiple_elem) == 1: # Rule 2\n",
+    "    #only one row with multiple elems\n",
     "    #logging.debug(\"Choosing rule 2\")\n",
-    "    ply = rule_two(state=state, data=data, genome=genome)\n",
+    "    #print(\"Rule2\")\n",
+    "    ply = rule_one_multiple_left(state=state, data=data, genome=genome, rule='Rule2')\n",
     "  \n",
-    "  else: # Rule 3              \n",
-    "    ply = rule_three(state, data, genome)\n",
+    "  else: # Rule 3  \n",
+    "    #print(\"Rule3\")            \n",
+    "    ply = rule_several_multiple_left(state, data, genome, rule='Rule3')\n",
     "\n",
     "  return ply"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +484,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 356,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def odd_number_of_rows_left(state: Nim, data: dict, genome: dict):\n",
+    "    rows_multiple_elem = data[\"rows_multiple_elem\"]\n",
+    "\n",
+    "    if len(rows_multiple_elem) == 1: # Rule 2\n",
+    "    #only one row with multiple elems\n",
+    "    #logging.debug(\"Choosing rule 2\")\n",
+    "        #print('rule4')\n",
+    "        ply = rule_one_multiple_left(state=state, data=data, genome=genome, rule='Rule4')\n",
+    "  \n",
+    "    else: # Rule 3 \n",
+    "        #print('rule5')             \n",
+    "        ply = rule_several_multiple_left(state=state, data=data, genome=genome, rule='Rule5')\n",
+    "\n",
+    "    return ply"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 357,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,15 +518,21 @@
     "\n",
     "        #only one active row left\n",
     "        if active_rows_number == 1:\n",
-    "            #logging.debug('Choosing rule 1')\n",
+    "            logging.debug('Choosing rule 1')\n",
     "            ply = one_row_left(state=state,data=data, genome=genome) \n",
     "        \n",
-    "        elif active_rows_number == 2:\n",
-    "           ply = two_rows_left(state=state, data=data, genome=genome)\n",
-    "      \n",
-    "        else:\n",
-    "            move = random.choice(data[\"possible_moves\"])\n",
-    "            ply = Nimply(move[0], move[1])\n",
+    "        #only two active rows left\n",
+    "        elif active_rows_number %2 == 0: # even numbers\n",
+    "            #print(\"Even number of rows\")\n",
+    "            ply = even_rows_left(state=state, data=data, genome=genome)\n",
+    "\n",
+    "        #if even number of active rows\n",
+    "        else: \n",
+    "            #print(\"odd numbers of rows\")\n",
+    "            ply = odd_number_of_rows_left(state=state, data=data, genome=genome)\n",
+    "       \n",
+    "            #move = random.choice(data[\"possible_moves\"])\n",
+    "            #ply = Nimply(move[0], move[1])\n",
     "\n",
     "        return ply\n",
     "\n",
@@ -502,31 +541,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<1 0 0>\n",
+      "<1 0 1 7>\n",
       "Nimply(row=0, num_objects=1)\n"
      ]
     }
    ],
    "source": [
-    "nim = Nim(3)\n",
+    "nim = Nim(4)\n",
     "\n",
-    "ply = Nimply(2,5)\n",
-    "nim.nimming(ply)\n",
+    "#ply = Nimply(0,1)\n",
+    "#nim.nimming(ply)\n",
     "ply = Nimply(1,3)\n",
+    "nim.nimming(ply)\n",
+    "ply = Nimply(2,4)\n",
     "nim.nimming(ply)\n",
     "\n",
     "data = cook_status(nim)\n",
     "\n",
     "print(nim)\n",
     "\n",
-    "genome = {'Rule1': 1, 'Rule2': [0,3], 'Rule3': [1,10]}\n",
+    "genome = {'Rule1': 1, 'Rule2': [1,8], 'Rule3': [0,0], 'Rule4': [0,0], 'Rule5':[0,10] }\n",
     "\n",
     "pl = make_strategy(genome=genome)\n",
     "ply = pl(nim)\n",
@@ -542,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 360,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +675,7 @@
        "'\\ndef evaluate(player1: dict, player2: dict, nim_size: int):\\n    # play 10 times against each other\\n    games = 10\\n    player_one_first = True\\n    while games > 0:\\n        if player_one_first:\\n            head2head(player1, player2, nim_size)\\n        else:\\n            head2head(player2, player1, nim_size)\\n        games -=1\\n'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 362,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 363,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +709,8 @@
     "    cond = POPULATION_SIZE\n",
     "    \n",
     "    while cond:\n",
-    "        individual = {'Rule1': random.randint(0,max_leave), 'Rule2': [random.randint(0,1), max_leave], 'Rule3': [random.randint(0, 1), random.randint(0, max_leave)]}\n",
+    "        individual = {'Rule1': random.randint(0,max_leave), 'Rule2': [random.randint(0,1), max_leave], 'Rule3': [random.randint(0, 1), random.randint(0, max_leave)],\n",
+    "        'Rule4': [random.randint(0,1), max_leave], 'Rule5': [random.randint(0,1), max_leave]}\n",
     "        individual['fitness'] = ()\n",
     "        population.append(individual)\n",
     "        cond -= 1\n",
@@ -677,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 364,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 365,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 367,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 368,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 369,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 370,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,9 +890,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 375,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:status: Player 1 won!\n",
+      "INFO:root:status: Player 1 won!\n",
+      "INFO:root:status: Player 1 won!\n",
+      "INFO:root:status: Player 1 won!\n"
+     ]
+    }
+   ],
    "source": [
     "logging.getLogger().setLevel(logging.INFO)\n",
     "\n",
@@ -870,23 +923,24 @@
     "    logging.info(f\"status: Player {winner} won!\")\n",
     "\n",
     "strat = make_strategy(evolution_agent(5))\n",
-    "#for _ in range(4):\n",
-    "play_nim(strat, random_agent)\n",
+    "\n",
+    "for _ in range(4):\n",
+    "    play_nim(strat, optimal_startegy)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 372,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Rule1': 0, 'Rule2': [0, 3], 'Rule3': [1, 10], 'fitness': ()}"
+       "{'Rule1': 0, 'Rule2': [1, 2], 'Rule3': [2, 2], 'fitness': ()}"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 372,
      "metadata": {},
      "output_type": "execute_result"
     }
